--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,14 @@
-/* font-family: 'Quicksand', sans-serif;
-COLORS
-light-yellow - #f7e4bf;
+/* font-family: 'Quicksand', sans-serif; */
+/* COLORS */
+/* light-yellow - #f7e4bf;
 light-blue - #78a7c6;
 dark-blue - #134d71;
 white - #ffffff;
-black - #000000;
-*/
+black - #000000; */
+
+/* body{
+    background-color: #78a7c6;
+} */
+body {
+    background-image: linear-gradient(to right, #f7e4bf, #78a7c6,  #134d71,  #ffffff);
+  }
