--- a/styles.css
+++ b/styles.css
@@ -10,35 +10,52 @@ black - #000000; */
     background-color: #78a7c6;
 } */
 body {
+    
+    
+    background-repeat: no-repeat;
     text-align: center;
-    background-image: linear-gradient(to right, #f7e4bf, #78a7c6,  #134d71,  #ffffff);
+    background-image: linear-gradient( #134d71, #78a7c6, #f7e4bf, #ffffff );
+    
+  }
+
+  h1 {
+    text-decoration-color: #ffffff;
   }
 
   h2 {
-    margin-top: 50px;
+    text-decoration-color: #ffffff;
+    margin-top: 40px;
 
   }
 
     .box{
+        word-spacing: 200px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 20px;
+        border-radius: 25px;
+        height: 70px;
+        width: 400px;
+        background-color:  #ffffff;
+      }
+
+      .box2{
         margin-left: auto;
         margin-right: auto;
         margin-top: 100px;
         border-radius: 25px;
         height: 100px;
-        width: 500px;
-        background-color:  #ffffff;
-      }
-
-      .box2 {
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 100px;
-        border-radius: 25px;
-        height: 100px;
-        width: 500px;
+        width: 600px;
         background-color:  #ffffff;
 
       }
+
+      .wrapper{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column; 
+       }
   
 
 /* 
