--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,15 @@ black - #000000; */
 /* body{
     background-color: #78a7c6;
 } */
-body {
-    
+HTML,body {
   
-    background-repeat: no-repeat;
+     height : 100%;
     text-align: center;
-    background-image: linear-gradient( #134d71, #78a7c6, #f7e4bf, #ffffff );
-    
+    background-image: linear-gradient(to bottom, #134d71, #78a7c6, #f7e4bf, #ffffff );
+  
   }
+
+
 
   h1 {
     text-decoration-color: #ffffff;
@@ -34,7 +35,7 @@ body {
         margin-right: auto;
         margin-top: 20px;
         border-radius: 25px;
-        height: 70px;
+        height: 90px;
         width: 400px;
         background-color:  #ffffff;
       }
@@ -44,18 +45,29 @@ body {
         margin-right: auto;
         margin-top: 100px;
         border-radius: 25px;
-        height: 100px;
-        width: 600px;
+        height: 130px;
+        width: 800px;
         background-color:  #ffffff;
-
+        margin-top: 15px;
       }
 
-      .wrapper{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column; 
-       }
+      button {
+        /* width: 10px;
+        height: 30px;
+        display: flex; */
+          font-size: 25px;
+          padding: 3px;
+          background-color: #0b0762;
+          border-radius: 3px;
+          border: none;
+          margin-top: 25px;
+      }
+
+      button:hover {
+        background-color: #EBC3A8;
+      }
+
+     
   
 
 /* 
