--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ HTML,body {
   }
 
     .box{
-        word-spacing: 200px;
+        word-spacing: 50px;
         margin-left: auto;
         margin-right: auto;
         margin-top: 20px;
@@ -48,8 +48,19 @@ HTML,body {
         height: 130px;
         width: 800px;
         background-color:  #ffffff;
-        margin-top: 15px;
+      
       }
+      /* label {
+        color: #000000;
+        font-size: 15px;
+        font-family: Quicksand;
+        margin-right: 30px;
+        margin-left: 50px;
+        line-height: 10px;
+        justify-content:space-between;
+        
+        display: flex;
+     } */
 
       button {
         /* width: 10px;
@@ -63,8 +74,39 @@ HTML,body {
           margin-top: 25px;
       }
 
+      .icon {
+          width: 75px;
+          height: 75px;
+          margin-left: auto;
+          margin-right: auto;
+          margin-top: 25px;
+      }
+
       button:hover {
         background-color: #EBC3A8;
+      }
+
+      .radio1 {
+        margin-right: auto;
+        margin-left: auto;
+       
+
+      }
+
+      .radio2 {
+        margin-right: auto;
+        margin-left: auto;
+        
+      }
+
+      .radio1:hover{
+        background-color: #EBC3A8;
+
+      }
+
+      .radio2:hover{
+        background-color: #EBC3A8;
+
       }
 
      
